fixed spacing for images in FeaturedWork

--- a/hvtilegrout/src/components/home/FeaturedWork.css
+++ b/hvtilegrout/src/components/home/FeaturedWork.css
@@ -13,6 +13,6 @@
   margin-bottom: 2em;
 }
 
-.featured-work .gallery img {
+.featured-work .gallery a {
   margin: auto;
 }
